2005-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-grob-properties.scm (avoid-slur): New property.

	* lily/phrasing-slur-engraver.cc (acknowledge_extra_object):
	* lily/slur-engraver.cc (acknowledge_extra_object): Invoke
	outside_slur_callback if avoid-slur != #'inside.

	* scm/define-grobs.scm (Fingering, Textscript): No
	inside-slur/outside-slur preference.
	(DynamicLineSpanner): Always outside slur.

	* input/regression/slur-script.ly: More tests.

2005-08-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/lilypond-book: fix notime entry.

	* Documentation/user/advanced-notation.itely: add info on
	getting an I rehearsal mark.

	* Documentation/user/putting.itely: reinstate "I", re-enforce
	the fact that \override numbers are the result of
	experimentation and personal taste.

	* Documentation/user/invoking.itely: update convert-ly bugs.

2005-08-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/stem-spacing.ly (Module): remove file.

	* input/regression/spacing-stick-out.ly: specify Score context for
	\override

	* input/regression/clefs.ly: remove spurious {}s 

2005-08-17  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/NEWS.tely,
	input/regression/repeat-percent-count.ly: clarify a bit.

2005-08-16  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* input/no-notation/display-lily-tests.ly: delete
	display-lily-init call.

	* ly/music-functions-init.ly (displayLilyMusic): move
	display-lily-init call at top level, so that the user should not
	have to call it.

	* scm/define-music-display-methods.scm (note-name->lily-string):
	retrieve note names directly from pitchnames using new function `rassoc'.
	(display-lily-init): note names list construction removed.

2005-08-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* THANKS: spello.

	* lily/lily-parser.cc (get_header): copy module, instead of
	returning it.

	* Documentation/topdocs/NEWS.tely (Top): add entry for percent
	counters.
